# spafm

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  post50k_v2_report.tar.gz.sha256  pyproject.toml
configs/benchmark/: baseline-hvg-real-mouse.yaml  baseline-pca-real-mouse.yaml  spafm-hier-dlpfc.yaml  spafm-s-eval.yaml  spafm-s-real-mouse.yaml
configs/model/: spafm-l.yaml  spafm-m.yaml  spafm-s-hier.yaml  spafm-s.yaml
configs/tokenizer/: spafm-s-visium-mouse.yaml  spafm-s.yaml
configs/training/: spafm-s-finetune.yaml  spafm-s-pretrain-hier-mouse.yaml  spafm-s-pretrain-hier-multi.yaml  spafm-s-pretrain-real-mouse.yaml  spafm-s-pretrain.yaml
docs/: README.md
docs/concepts/: SpaFM 总体方案.md  术语表.md  论文要点解读.md
docs/getting-started/: 环境配置.md
docs/guides/: Stage1 复现指南.md
docs/model-cards/: spafm-s.md
docs/playbooks/: codex-runbook-post50k-v2.md  downstream-tb-ccc.md  downstream-td-svg.md  hierarchical-spafm-跑通.md  post50k-修复与下游评测.md  server-data-prep.md  server-launch.md  stage1-数据语料构建.md  stage2-表征与词表设计.md  stage3-模型架构.md  stage4-预训练目标.md  stage5-知识增强.md  stage6-下游适配.md  stage7-评测基准.md  stage8-工程化.md  stage9-scaling.md
docs/references/: datasets.bib  依赖清单.md  数据集引用.md  数据集清单.md
post50k_report/: post50k_report.tar.gz.sha256
scripts/: eval_benchmark.py  eval_ccc.py  eval_svg.py  package_results.sh  scaling_report.py  train_finetune.py  train_pretrain.py  train_pretrain_hier.py
scripts/data/: merge_dlpfc_layer.py
src/spafm/: __init__.py  cli.py  model_cli.py  registry.py
tests/: __init__.py
tests/adaptation/: test_finetune.py
tests/benchmarks/: test_benchmarks.py  test_ccc.py  test_svg.py
tests/cli/: test_cli.py
tests/knowledge/: test_knowledge.py
(+49 files in other folders)
